--- a/src/components/connexion/connexion.component.html
+++ b/src/components/connexion/connexion.component.html
@@ -32,4 +32,22 @@
     <button type="submit">se connecter</button>
   </form>
 </div>
+<br /><
 <app-footer></app-footer>
+<div class="logo-container">
+  <a href="https://www.leforem.be/"
+    ><img style="inline-size: 25%" src="assets\logo_FOREM.jpg" alt="Forem"
+  /></a>
+  <a href="https://www.vdab.be/"
+    ><img style="inline-size: 23%" src="assets\logo_VDAB.jpg" alt="VDAB"
+  /></a>
+  <a href="https://www.linkedin.com/in/vincent-szmulikowski-122881151/"
+    ><img
+      style="inline-size: 25%"
+      src="assets\logo_Linkedin.jpg"
+      alt="Linkedin"
+  /></a>
+  <a href="https://www.actiris.brussels/fr/citoyens/"
+    ><img style="inline-size: 18%" src="assets\Logo_ACTIRIS.avif" alt="ACTIRIS"
+  /></a>
+</div>
