--- a/src/components/navigation/navigation.component.html
+++ b/src/components/navigation/navigation.component.html
@@ -9,9 +9,9 @@
           inset-inline-start: 2%;
           margin-inline-start: -40px;
         "
-        src="assets\logo_Emploi.png"
+        src="assets\logo-recherche emploi.avif"
         alt="Logo"
-        height="40"
+        height="120"
       />
     </a>
     <button
