--- a/src/components/job-search/job-search.component.html
+++ b/src/components/job-search/job-search.component.html
@@ -62,8 +62,8 @@
           formControlName="employerEmail"
           id="employerEmail"
           placeholder="Adresse email employeur"
-          minlength="8"
-          maxlength="30"
+          minlength="4"
+          maxlength="35"
           required
         />
       </div>
@@ -134,6 +134,7 @@
           <option value="" disabled selected>
             Choisir une note pour cette recherche
           </option>
+          <option value="médiocre">Super!!!!</option>
           <option value="trés bien">Trés bien!</option>
           <option value="bien">Bien!</option>
           <option value="moyen">Moyen!</option>
@@ -152,7 +153,21 @@
           <option value="web">VDAB</option>
           <option value="linkedin">LinkedIn</option>
           <option value="web">Web</option>
+          <option value="Vacances Annuelles">VACANCES ANNUELLES</option>
+          <option value="Stage">Stage</option>
         </select>
+      </div>
+    </div>
+    <div style="display: flex; justify-content: space-between">
+      <div style="inline-size: 30%">
+        <label for="vacances annuelles"></label>
+        <input
+          style="inline-size: 1580px; background-color: rgb(236, 160, 60)"
+          type="text"
+          formControlName="vacances annuelles"
+          id="vacances annuelles"
+          placeholder="vacances annuelles"
+        />
       </div>
     </div>
     <div style="display: flex; justify-content: space-between">
